# VisioneR2

./: .gitignore  .gitmodules  README.md  VisioneR2.code-workspace
scripts/: build.sh
src/: main.cpp  meson.build
src/subprojects/: remotion_ctrl
src/subprojects/object_finder/: CMakeLists.txt
src/subprojects/object_finder/include/: Quadrilateral.hpp  Visualizer.hpp
src/subprojects/object_finder/src/: ObjectFinder.cpp  Quadrilateral.cpp  Visualizer.cpp
submodules/object_finder/: CMakeLists.txt
submodules/object_finder/include/: ObjectFinder.hpp
submodules/object_finder/src/: ObjectFinder.cpp  opencv_tools.cpp  opencv_tools.hpp
